Switch to lua config